add image files & styling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,124 @@
   <title>Document</title>
 </head>
 <body>
-  <!-- your code here -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Derek Martinez</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Hobbies</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Interests</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Career Goals</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="d-flex justify-content-center">
+    <div style="padding: 40px 70px; max-width: 1200px;">
+    <h1>Hobbies</h1>
+  <div class="row row-cols-1 row-cols-md-2 g-4">
+    <div class="col">
+      <div class="card">
+        <img src="tennis.jpeg" class="card-img-top" alt="tennis">
+        <div class="card-body">
+          <h5 class="card-title">Sports</h5>
+          <p class="card-text">The majority of my free time is spent playing a variety of different recreational sports. Some of my favorite sports are highlighted below.</p>
+          <div class="d-grid gap-1">
+            <div class="p-1 bg-light border">Football</div>
+            <div class="p-1 bg-light border">Basketball</div>
+            <div class="p-1 bg-light border">Tennis</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <img src="fishing.jpeg" class="card-img-top" alt="fishing">
+        <div class="card-body">
+          <h5 class="card-title">Fishing</h5>
+          <p class="card-text">As a south Florida native one of my favorite hobbies is fishing the countless canals throughout Miami. Peacock Bass (pictured above) are one my favorite species to target.</p>
+        </div>
+      </div>
+    </div>
+</div>
+<hr style="margin-top: 70px; margin-bottom: 70px;">
+<h1>Interests</h1>
+<div class="row row-cols-1 row-cols-md-2 g-4">
+  <div class="col">
+    <div class="card">
+      <img src="cars.png" class="card-img-top" alt="cars">
+      <div class="card-body">
+        <h5 class="card-title">Cars</h5>
+        <p class="card-text">I recently purchased a project vintage sports car and have been spending time learning how to repair and maintain vehicles of that era. I'm specifically interested in Japenese sports cars as well as American muscle cars.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="movies.jpeg" class="card-img-top" alt="movies">
+      <div class="card-body">
+        <h5 class="card-title">Movies</h5>
+        <p class="card-text">I have always been interested in the film industry and enjoy watching all different types of movies from many different generations. My favorite genre would have to be horror/thriller.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="hawaii.jpeg" class="card-img-top" alt="hawaii">
+      <div class="card-body">
+        <h5 class="card-title">Travel</h5>
+        <p class="card-text">I have always been interested in exploring different cultures and learning about their histories. The next destination I would like to visit would be Hawaii.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<hr style="margin-top: 70px; margin-bottom: 70px;">
+
+<h1>Career Goals</h1>
+<div class="row row-cols-1 row-cols-md-2 g-4">
+  <div class="col">
+    <div class="card">
+      <img src="logos.jpeg" class="card-img-top" alt="non-profit logos">
+      <div class="card-body">
+        <h5 class="card-title">Work For A Non-Profit</h5>
+        <p class="card-text">In my career I would like to spend a few years working for a non-profit. I hope to be able to use my skillset in order to benefit communities in need and make tangible, positive progress within their lives.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="business-owner.jpeg" class="card-img-top" alt="business-owner">
+      <div class="card-body">
+        <h5 class="card-title">Start My Own Business</h5>
+        <p class="card-text">By the end of my career I hope to be self-employed and have my own established brand. </p>
+      </div>
+    </div>
+  </div>
+
+</div>
+  </div>
+</div>
+</div>
+
+<footer class="bg-light text-center p-3">
+  <p>&copy; 2023 Derek Martinez</p>
+</footer>
+  <script src="index.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  
 </body>
 </html>
